0.4.6
- feature: Add configuration: hide the page browser in list view (#2015)
- feature: Add configuration: hide the search box in list view (#2014)
- feature: Add configuration: hide date in list view if it is the same as the previous event's date (#221)
- feature: add accreditation number to the registration page (#220)

0.4.5 (released 2006-08-01)
- Feature: Display time and place in the list view (#219)
- Code cleanup and refactoring (#197)
- Feature: Make it configurable whether to also show the time of the registration deadline (#196)
- replace <!--### with <!-- ### in all HTML templates (#195)
- Fix: Flexform is shown twice if a second BE language exists (#188)
- Feature: Add UID to registration page and make it configurable which fields get displayed (#182)
- Improved the manual.

0.4.4 (released 2006-07-21)
- Polish: Refine the wording of some of the registration fields (#153)
- Fix: There's an em dash &#8211; in the subject of additional notification mails (#0003551)
- Fix: there's <tr###CLASS_HEADERROW###> in the list view header (#0003324)
- Fix: make this extension work with TYPO3 4.0 (#0003553, #0003555)
- Feature: sort registrations in mod1 by creation date (#0003606)
- Feature: front end list of registrations for an event (#0003068, #0003601, #0003602, #0003603)
- Feature: Display event date to the event details in mod1. Sort seminars in mod1 by date. Added data structures for registration lists (#0001884, #0001875)
- Feature: add fields for lodging and food to the registration form (#0003366)
- Fix: bug in notification mail (#0003420)
- Fix: reliably catch wrong seminar UIDs in the piVars plus some cleanup (#0002700)
- Polish the BE flexforms localized strings (#0003280)
- Feature: Added "My events" content type. (#0001710)
- Fix: Correctly display open-ended events. Also consider events without a begin date to take place in the future. (#0001995)
- Made tx_seminars_objectfromdb also work with JOIN queries (#0003194)