@@ -1,4 +1,5 @@
 0.4.6
+- Fix: Events without dates are considered to have a registration deadline that is over. (#3556)
 - feature: Add configuration: hide the page browser in list view (#2015)
 - feature: Add configuration: hide the search box in list view (#2014)
 - feature: Add configuration: hide date in list view if it is the same as the previous event's date (#221)
